mere input abbreviations.  Minor INCOMPATIBILITY.

* Session HOL-Word: Theory HOL-Library.Z2 is not imported any longer.
Minor INCOMPATIBILITY.

* Session HOL-TPTP: The "tptp_isabelle" and "tptp_sledgehammer" commands
are in working order again, as opposed to outputting "GaveUp" on nearly
all problems.

* SMT reconstruction: It is now possible to reconstruct proofs from the
SMT solver veriT via the tactic veriT_smt.

*** FOL ***

* Added the "at most 1" quantifier, Uniq, as in HOL.

* Simproc "defined_all" and rewrite rule "subst_all" have been changed
as in HOL.


*** ML ***

* Theory_Data extend operation is obsolete and needs to be the identity
function; merge should be conservative and not reset to the empty value.
Subtle INCOMPATIBILITY and change of semantics (due to
Theory.join_theory from Isabelle2020). Special extend/merge behaviour at
the begin of a new theory can be achieved via Theory.at_begin.

* Antiquotations @{scala_function}, @{scala}, @{scala_thread} refer to
registered Isabelle/Scala functions (of type String => String):
invocation works via the PIDE protocol.


*** System ***

* Update/rebuild external provers on currently supported OS platforms,
notably E Prover 2.5, SPASS 3.8ds, CSDP 6.1.1.

* Discontinued obsolete isabelle display tool, and DVI_VIEWER settings
variable.

* The command-line tool "isabelle logo" only outputs PDF; obsolete EPS
(for DVI documents) has been discontinued. Former option -n has been
turned into -o with explicit file name. Minor INCOMPATIBILITY.

* The shell function "isabelle_directory" (within etc/settings of
components) augments the list of special directories for persistent
symbolic path names. This improves portability of heap images and
session databases. It used to be hard-wired for Isabelle + AFP, but
other projects may now participate on equal terms.

* ML statistics via an external Poly/ML process: this allows monitoring
the runtime system while the ML program sleeps.
